--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -13,10 +13,23 @@ body{
     font-size: 700;
     padding: 15px 25px ;
 }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin:0px 200px ;
 
 }
 .nav-title{
@@ -35,4 +48,55 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474747;
+}
+.header{
+    background-color: white;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
+}
+.banner{
+    padding: 50px 20px 30px 150px ;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.banner .profile-picture{
+    width: 200px;
+   
+
+}
+.banner-content{
+    max-width: 500px;
+}
+.banner-greeting{
+    font-size: 45px;
+   color: #474747;
+   margin-bottom: 0;
+
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+main{
+    width: 1140px;
+    margin: 0 auto;
+}
+.about{
+    padding:130px ;
+border-radius: 10px;
+background: #fff8f3;
+margin:130px 0 ;
+
+}
+.about-info-container{
+    display: flex;
+ justify-content:space-around ;   
+}
+.about-info{
+    text-align: center;
 }
