--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -86,6 +86,10 @@ main{
     width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
+
 .about{
     padding:130px ;
 border-radius: 10px;
@@ -99,4 +103,58 @@ margin:130px 0 ;
 }
 .about-info{
     text-align: center;
+}
+#what-i-do-description{
+    padding: 30px 150px;
+}
+.skillls-container{
+    display: flex;
+    gap: 24px;
+}
+.skills{
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff8f3;
+    box-shadow: 0px 6px 50px 0px;
+}
+.skills-description{
+    color: #757575 ;
+}
+
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700px;
+
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700px;
+    margin-top: 10px;
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+
+}
+
+
+.resume-item-institute,.resume-item-description{
+    color: #757575;
+}
+
+
+.resume-container hr{
+    margin: 30px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+    
 }
