--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -156,5 +156,13 @@ margin:130px 0 ;
 .download-cv{
     text-align: center;
     margin-top: 50px;
+    color: #fd6e0a;
     
+}
+.footer{
+    display: flex;
+    background: #fff8f3;
+    margin-top:100px ;
+    padding: 130px 200px;
+
 }
